--- a/index.html
+++ b/index.html
@@ -194,15 +194,16 @@
                         <span class="contact__text">Navi Mumbai, Maharashtra, India</span>
                     </div>
 
-                    <form action="" class="contact__form">
+                    <form action="https://api.web3forms.com/submit" method="POST" class="contact__form">
                         <div class="contact__inputs">
-                            <input type="text" placeholder="Name" class="contact__input">
-                            <input type="mail" placeholder="Email" class="contact__input">
+                            <input type="hidden" name="access_key" value="3b72924e-8288-4d21-9ebc-106cb8b555bf">
+                            <input type="text" name="name" placeholder="Name" class="contact__input" required>
+                            <input type="email" name="email" placeholder="Email" class="contact__input" required>
                         </div>
 
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <textarea name="message" cols="0" rows="10" class="contact__input" placeholder="Message"></textarea>
 
-                        <input type="submit" value="Send" class="contact__button">
+                        <button type="submit"  class="contact__button">Send</button>
                     </form>
                 </div>
             </section>
@@ -229,9 +230,9 @@
                 
                 <div class="footer__data">
                     <h2 class="footer__title">FOLLOW</h2>
-                    <a href="#" class="footer__social"><i class='bx bxl-facebook' ></i></a>
-                    <a href="#" class="footer__social"><i class='bx bxl-instagram' ></i></a>
-                    <a href="#" class="footer__social"><i class='bx bxl-twitter' ></i></a>
+                    <a href="https://www.facebook.com/prathamesh.shinde.14473426/" class="footer__social"><i class='bx bxl-facebook' ></i></a>
+                    <a href="https://www.instagram.com/prathamesh.901/" class="footer__social"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://twitter.com/Pratham16489218" class="footer__social"><i class='bx bxl-twitter' ></i></a>
                 </div>
 
 
