--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                 </div>
                 
                 <div class="footer__data">
-                    <h2 class="footer__title">FOLLOW</h2>
+                    <h2 class="footer__title">FOLLOW.</h2>
+                    
                     <a href="https://www.facebook.com/prathamesh.shinde.14473426/" class="footer__social"><i class='bx bxl-facebook' ></i></a>
                     <a href="https://www.instagram.com/prathamesh.901/" class="footer__social"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://twitter.com/Pratham16489218" class="footer__social"><i class='bx bxl-twitter' ></i></a>
