--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <title>Portfolio</title>
     </head>
     <body>
+        <script defer src="/_vercel/insights/script.js"></script>
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
