--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <title>Portfolio</title>
     </head>
     <body>
-        <script defer src="/_vercel/insights/script.js"></script>
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
@@ -246,6 +245,10 @@
 
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
+        <script>
+            window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+          </script>
+          <script defer src="/_vercel/insights/script.js"></script>
     </body>
 </html>
 
