--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@
             window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
           </script>
           <script defer src="/_vercel/insights/script.js"></script>
+
+          <!-- Matomo -->
+<script>
+    var _paq = window._paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="https://prathamesh901portfoliovercelapp.matomo.cloud/";
+      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      _paq.push(['setSiteId', '1']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.async=true; g.src='//cdn.matomo.cloud/prathamesh901portfoliovercelapp.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+    })();
+  </script>
+  <!-- End Matomo Code -->
     </body>
 </html>
 
